--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "symfony/validator": "8.0.*",
         "symfony/web-link": "8.0.*",
         "symfony/yaml": "8.0.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/cssinliner-extra": "^3.23",
+        "twig/extra-bundle": "^3.23",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
